--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-chart-kit": "^5.3.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-material-menu": "^1.1.3",
+    "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
