--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/drawer": "^5.4.1",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
-    "apisauce": "^1.1.1",
+    "axios": "^0.19.2",
     "lottie-ios": "3.1.3",
     "lottie-react-native": "^3.3.2",
     "native-base": "^2.13.12",
@@ -28,6 +29,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.0.3",
     "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0"
